--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,6 +4,34 @@
 {% block content %}
     {% include 'navbar.html'%}
     {% include 'social.html' %}
+    <style>
+        {% block style %}
+        .foto{
+          width:100%;
+          position:relative;
+        }
+
+        .foto img{
+          width:100%;
+          max-height: 450px;
+        }
+
+        .foto p{
+          position:absolute;
+          bottom:20px;
+          width:100%;
+          text-align:center;
+          color:rgba(243,243,243,.8);
+          font-family:Verdana;
+          font-size:18px;
+          font-style: italic;
+          background-color:rgba(0,0,0,.7);
+          padding:.5em 0;
+        }
+        {% endblock %}
+    </style>
+
+  <body>
     <!-- Título -->
     <div class="foto">
       <img  class="responsive" src="{% static 'img/about2.jpg' %}" alt="foto">
@@ -61,4 +89,5 @@
       </div>
     </div>
 </div>
+  </body>
 {%endblock%}
