--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -110,27 +110,9 @@
         <!-- Aside  -->
         <aside class="col-md-3 hidden-xs hidden-sm my-aside">
             <div class="list-group">
-                <a href="#" class="list-group-item active">Categorías</a>
-                <a href="#" class="list-group-item">Laptops</a>
-                <a href="#" class="list-group-item">Tablets</a>
-                <a href="#" class="list-group-item">Computadoras de escritorio</a>
-                <a href="#" class="list-group-item">Accesorios de cómputo</a>
-                <a href="#" class="list-group-item">Hardware</a>
-                <a href="#" class="list-group-item">Mantenimiento</a>
-                <a href="#" class="list-group-item">Instalación de redes</a>
-                <a href="#" class="list-group-item">Software</a>
-                <a href="#" class="list-group-item">Impresoras</a>
-                <br> <br>
-                <a href="#" class="list-group-item active">Categorías</a>
-                <a href="#" class="list-group-item">Laptops</a>
-                <a href="#" class="list-group-item">Tablets</a>
-                <a href="#" class="list-group-item">Computadoras de escritorio</a>
-                <a href="#" class="list-group-item">Accesorios de cómputo</a>
-                <a href="#" class="list-group-item">Hardware</a>
-                <a href="#" class="list-group-item">Mantenimiento</a>
-                <a href="#" class="list-group-item">Instalación de redes</a>
-                <a href="#" class="list-group-item">Software</a>
-                <a href="#" class="list-group-item">Impresoras</a>
+		{% for clasif in clasificacion_list %}
+		    <a href="{% url 'start:filtro' filtro=clasif.clasificacion %}" class="list-group-item"/>{{ clasif.clasificacion }}</a>
+		{% endfor %}
             </div><br>
         </aside>
 
