List por Template Tag

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,117 +1,21 @@
 {% extends 'base.html'%}
 {% load static %}
 {% block content %}
-<style>
-{%block style%}
 
-  .my-div {
-    background-color: white;
-  }
-  .fondo-inicio {
-    /*background-image: url(../img/.jpg);*/
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: #464646;
-    height: 650px;
-  }
-
-  body {
-    background-color: #171817;
-  }
-  section {
-    color: #403d3d;
-  }
-
-  p {
-    text-align: center;
-  }
-
-  .div-contenedor {
-    /*padding-top: 15px;*/
-    /*height: 620px;*/
-    /*width: 350px;*/
-    background-color: white;
-    border-radius: 24px 0px 24px 0px;
-    -moz-border-radius: 24px 0px 24px 0px;
-    -webkit-border-radius: 24px 0px 24px 0px;
-    border: 0px solid #000000;
-    padding-top: 15px;
-    max-height:inherit;
-    /*padding-bottom: 30px;*/
-    /*margin-right: 0.2em;*/
-  }
-  .raised {
-  -webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-     -moz-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-      box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-
-  .div-botones{
-    background-color: white;
-    text-align: center;
-    width: 100%;
-
-  }
-  .grow:hover
-  {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
-  -transition:  all 500ms ease;
-  -webkit-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  z-index: 1;
-  }
-
-  .color:hover
-  {
-    background:#f3f3f3;
-    color: white;
-  }
-
-/*.my-color {
-    color: #fffcfc;
-  }*/
-  .texto-index{
-    /*position:absolute;*/
-    /*bottom:20px;
-    width:100%;*/
-    /*text-align:center;*/
-    /*color:rgba(243,243,243,.8);*/
-    font-family:Verdana;
-    font-size:18px;
-    font-style: italic;
-    /*background-color:rgba(0,0,0,.7);*/
-    /*padding:.5em 0;*/
-  }
-
-  /*.my-aside{
-    margin-right: 0.5em;
-  }*/
-
-  /*div { border-style: outset; border-width: 1px; }*/
-.breadcrumb {background: rgba(255, 255, 255, 1); border: 0px solid rgba(255, 255, 255, 1); border-radius: 25px; display: block; height: 40px;}
-.breadcrumb>li+li:before {color: rgba(204, 204, 204, 1); content: "\00a0";}
-{%endblock%}
-</style>
-
-<body>
-  <!--Navbar-->
-  {% include 'navbar.html'%}
+<div class="body">
   <!--Barra Social-->
   {% include 'social.html'%}
 
-{% include 'slideshow.html' %}<br>
+{% include 'slideshow.html' %}
+<br>
 <div class="col-md-10 col-md-offset-1">
 <!--<section class="main container">-->
 
         <!-- Aside  -->
         <aside class="col-md-3 hidden-xs hidden-sm my-aside">
             <div class="list-group">
-		{% for clasif in clasificacion_list %}
-		    <a href="{% url 'start:filtro' filtro=clasif.clasificacion %}" class="list-group-item"/>{{ clasif.clasificacion }}</a>
+		{% for categoria in categoria_list %}
+		    <a href="{% url 'start:filtro' filtro=categoria.categoria %}" class="list-group-item"/>{{ categoria.categoria }}</a>
 		{% endfor %}
             </div><br>
         </aside>
@@ -181,5 +85,5 @@
             </ol>
         </div>
     </footer>
-</body>
+</div>
 {% endblock %}
