--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,30 +1,6 @@
-<!-- Navbar -->
-
-{%block content%}
-<style>
-  {%block style%}
-  .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-    color: #fff;
-    /*background-color: #337ab7;*/
-    background-color: #b11e1e;
-}
-  .navbar {
-     Background: rgba(1,2,1,0.9);
-     Color: rgba(1,1,1,1);
-     border-color: transparent;
-  }
-  body {
-    min-height:inherit;
-    padding-top: 50px;
-  }
-
-.navbar-inverse .navbar-brand {
-    color: #777;
-    background: #bd1717;
-}
-{%endblock style%}
-</style>
-<body>
+{% block content %}
+{% load filtro_tag %}
+<div class="body-navbar">
     <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -46,12 +22,14 @@
                         Categorías <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Categoría #1</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Categoría #2</a></li>
-                        <li><a href="#">Categoría #3</a></li>
-                        <li><a href="#">Categoría #4</a></li>
-                        <li><a href="#">Categoría #5</a></li>
+						{% categorias_lista as categorias %}
+						{% if categorias %}
+						{% for obj in categorias %}
+		    				<li><a href="{% url 'start:filtro' filtro=obj.categoria %}"/>{{ obj }}</a></li>
+						{% endfor %}
+						{% else %}
+							<li><a href="#">Empty</a></li>
+						{% endif %}
                     </ul>
                     </li>
                     <li><a href="{% url 'start:about' %}">Acerca de nosotros</a></li>
@@ -83,5 +61,5 @@
             </div>
         </div>
     </nav>
-</body>
+</div>
 {%endblock content%}
