--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <!-- <body my-body-about style="background-image: url('{% static "img/login2.jpg"%}')";> -->
-<body>
+<div class="body">
   <div class="container col-md-12">
     <div class="col-md-4 col-md-offset-4"><br><br>
       <div class="col-sm-12 div-contenedor raised ">
@@ -84,6 +84,6 @@
       <a class="btn skype" href="#"><i class="fa fa-skype"></i></a>
     </div>
   </div>
-</body>
+</div>
 
 {% endblock %}
