--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://use.fontawesome.com/e5ab5ecece.js"></script>
-    <title>eicom</title>
+    <title>Eicom - Tecnologias</title>
 </head>
 <body class="body-base">
 	{% include 'navbar.html'%}
@@ -33,11 +33,7 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-
-
-
     {% block content %}
-
     {% endblock %}
 
     <script src="https://use.fontawesome.com/e5ab5ecece.js"></script>
