--- a/src/templates/slideshow.html
+++ b/src/templates/slideshow.html
@@ -1,8 +1,6 @@
-{% load static %}
+{% load static %} 
 <!-- slideshow -->
-<!-- <div class="container-fluid"> -->
-<!-- <div class="col-md-12"> -->
-{% block content %}
+{% block content %}{#{ forloop.counter0 }#}
 <style>
     {% block style %}
   .carousel-inner img {
@@ -17,55 +15,20 @@
 </style>
   <div id="carousel-1" class="carousel slide show" data-ride="carousel">
     <!-- indicadores -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-1" data-slide-to="1"></li>
-      <li data-target="#carousel-1" data-slide-to="2"></li>
-      <li data-target="#carousel-1" data-slide-to="3"></li>
-      <li data-target="#carousel-1" data-slide-to="4"></li>
-      <li data-target="#carousel-1" data-slide-to="5"></li>
-    </ol>
-    <!-- contenedor de los slide -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active" >
-        <img class="img-responsive" src="{% static 'img/slide1.jpg' %}" alt="">
-        <div class="carousel-caption hidden-xs hidden-sm">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dolores.</p>
-        </div>
-      </div>
-      
-      <div class="item">
-        <img class="img-responsive " src="{% static 'img/slide3.jpg' %}" alt="">
-        <div class="carousel-caption hidden-xs hidden-sm">
-          <h3>Este es nuestro slide #3</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img class="img-responsive " src="{% static 'img/slide4.jpg' %}" alt="">
-        <div class="carousel-caption hidden-xs hidden-sm">
-          <h3>Este es nuestro slide #4</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img class="img-responsive " src="{% static 'img/slide5.jpg' %}" alt="">
-        <div class="carousel-caption hidden-xs hidden-sm">
-          <h3>Este es nuestro slide #5</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img class="img-responsive " src="{% static 'img/slide6.jpg' %}" alt="">
-        <div class="carousel-caption hidden-xs hidden-sm">
-          <h3>Este es nuestro slide #6</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-    </div>
+		{% for obj in object_slideshow %}
+		{% endfor %}
+		<!-- contenedor de los slide -->
+		<div class="carousel-inner" role="listbox">
+			{% for obj in object_slideshow %}
+		    <div class="item {% if forloop.counter == 1 %}active{% endif %}" >
+		        <img class="img-responsive" src="{{ obj.imagen.url }}" alt="">
+		    	<div class="carousel-caption hidden-xs hidden-sm">
+					<h3 href="{% url 'start:detail' slug=obj.equipo.get_absolute_url }}">{{ obj.titulo}}</h3>
+		        	<p>{{ obj.descripcion}}</p>
+		    	</div>
+			</div>
+			{% endfor %}
+		</div>
     <!-- Controles -->
     <a href="#carousel-1" class="left carousel-control" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -76,6 +39,4 @@
       <span class="sr-only">Siguiente</span>
     </a>
   </div>
-<!-- </div> -->
-<!-- </div> -->
 {% endblock %}
