--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -60,8 +60,6 @@
 {%endblock%}
 </style>
 
-
-
 <body class="body-contact">
     <div class="container-fluid body-contact">
         <div class="row">
@@ -115,10 +113,9 @@
                                 <span class="input-group-addon"><i class="fa fa-comment" aria-hidden="true"></i></span>
                                 {{contact_form.mensaje|as_crispy_field}}
                             </div>
+                            <br>
+                            <button class="btn btn-primary btn-block" type="submit" ><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Enviar comentario</button><br><br><br>
                         </div><br>
-                        <div class="col-md-10 col-md-offset-1">
-                            <button class="btn btn-primary btn-block type="submit" ><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Enviar comentario</button><br><br><br>
-                        </div>
                     </div>
                 </form>
             </div>
