--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,23 +2,26 @@
 <style>
     {% block style %}
 
-        .color-footer{
-            padding-top: 0.8cm;
-            background-color: #0e76a8;
+        .color-footer-index {
+            height: 62.53px;
+            padding-top: 0.1cm;
+            background-color: #000000;
+            padding-bottom: 0.1cm;
         }
+        .text-footer{
+            padding-bottom: 50%;
 
+        }
 
     {% endblock style %}
 </style>
 
 <footer>
-        <div class="container">
-            <div class="color-footer">
-                <p>CONTÁCTANOS</p>
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-                <i class="fa fa-google-plus" aria-hidden="true"></i>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 color-footer-index">
+                    <a href="/">EICOM.COM <i class="fa fa-registered" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
 </footer>
