--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -8,6 +8,13 @@
     padding-top: 50px;
   }
 
+  .navbar-inverse .navbar-nav>li>a {
+    color: #c7c7c7;
+    }
+  .navbar-inverse .navbar-brand {
+    background: #b11e1e;
+    color: #c7c7c7;
+}
   .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
     color: #fff;
     /*background-color: #337ab7;*/
@@ -24,6 +31,8 @@
     background: #b11e1e;
     color:white;
 }
+
+
 
 {%endblock style%}
 </style>
@@ -62,28 +71,28 @@
                     <li><a href="{% url 'start:about' %}">Acerca de nosotros</a></li>
                     <li><a href="{% url 'start:contact' %}">Contacto</a></li>
                     {% if request.user.is_authenticated %}
-                    <li><a href="{% url 'auth_logout' %}">Salir</a></li>
-                    {% else %}
-                    <li><a href="{% url 'registration_register' %}">Registrarse</a></li>
-                    {% endif %}
-                    {% if not request.user.is_authenticated and not "/accounts/login" in request.get_full_path %}
+                    <!--<li><a href="{% url 'auth_logout' %}">Salir</a></li>-->
+                    <!--{% else %}-->
+                    <!--<li><a href="{% url 'registration_register' %}">Registrarse</a></li>-->
+                    <!--{% endif %}-->
+                    <!--{% if not request.user.is_authenticated and not "/accounts/login" in request.get_full_path %}-->
 
-                    <li><a href="{% url 'auth_login' %}">Iniciar sesión</a></li>
-                    {% endif %}
+                    <!--<li><a href="{% url 'auth_login' %}">Iniciar sesión</a></li>-->
+                    <!--{% endif %}-->
 
                 </ul>
                 <!-- Búsqueda -->
                 {% if "/" in request.get_full_path%}
-                    <form action="" class="navbar-form navbar-right " role="search" method="get">
+                    <form id="searchform" action="" class="navbar-form navbar-right " role="search" method="get">
                         <div class="input-group">
-                            <input type="text" name="q" class="form-control" placeholder="buscar" value="{{ request.GET.q }}">
+                            <input type="text" name="q" class="form-control" placeholder="buscar aquí..." value="{{ request.GET.q }}">
                             <span class="input-group-btn">
-                                <input class="btn btn-primary" type="submit" value="buscar">
-                                <span class="glyphicon glyphicon-search"></span>
+                                <button class="btn btn-danger" type="submit"> <i class="fa fa-search" aria-hidden="true"></i></button>
+                                <!--<input class="btn btn-primary" type="submit" value="">-->
                             </span>
                         </div>
                     </form>
-                 {% endif%}
+                {% endif%}
             </div>
         </div>
     </nav>
