--- a/src/templates/pruebas.html
+++ b/src/templates/pruebas.html
@@ -18,5 +18,42 @@
   
   
 </body>
-{%endblock%}
 
+
+<div class="container-fluid">
+            <br>
+            <div class="panel-group">
+                <div class="panel">
+                    <div class="">
+                        <div class="page-header">
+                            <h1>{{ instance.nombre }}</h1>
+                        </div>
+
+                    </div>
+                    <div class="panel-heading">
+                        <div class="col-md-12">
+                            <div class="col-md-4">
+                                {% if instance.imagen %}
+                                    <img src="{{ instance.imagen.url }}" class="img-responsive thumbnail imagen-detail" alt=""/>
+                                    <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
+                                {% endif %}
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Especificaciones:</h3><br>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Modelo: {{ instance.modelo }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Marca: {{ instance.marca }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Procesador: {{ instance.procesador }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Harddrive: {{ instance.harddrive }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Pantalla: {{ instance.pantalla }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Memoria Ram: {{ instance.ram }}</p>
+                                <p parrafo><i class="fa fa-angle-double-right parrafo" aria-hidden="true"></i> Tarjeta de video: {{ instance.video }}</p><br>
+                                <p>Descripción: {{ instance.descripcion }}</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="panel-body ">
+
+                    </div>
+                </div>
+            </div>
